--- a/style.css
+++ b/style.css
@@ -179,5 +179,18 @@ h2{
 .text{
     padding: 10px;
 }
-
+.about{
+    
+    width: 60%;
+     border: 5px solid #DAAD86;
+     padding: 10px 30px;
+   font-size: larger;
+     text-align: justify;
+       margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  /* -ms-transform: translate(-50%, -50%); */
+  transform: translate(-50%, -50%);
+}
 
