--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ nav ul li a{
     font-weight: bold;
 }
 
+a{
+    color: white;
+}
+
 a.active,a:hover{
     background: #BC986A;
     transition: .5s;
@@ -86,6 +90,7 @@ a.active,a:hover{
     }
     nav ul li a{
       font-size: 16px;
+      color: #BC986A;
     }
 }
 
@@ -96,7 +101,7 @@ a.active,a:hover{
 
 ul{
     position: fixed;
-    z-index: 9;
+    z-index: 1;
     width: 100%;
     height: 100vh;
     background: white;
@@ -196,15 +201,15 @@ h2{
 .about{
     
     width: 60%;
-     border: 5px solid #DAAD86;
-     padding: 10px 30px;
-   font-size: larger;
-     text-align: justify;
-       margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  /* -ms-transform: translate(-50%, -50%); */
-  transform: translate(-50%, -50%);
+    border: 5px solid #DAAD86;
+    padding: 10px 30px;
+    font-size: larger;
+    text-align: justify;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    /* -ms-transform: translate(-50%, -50%); */
+    transform: translate(-50%, -50%);
 }
 
