--- a/watch.css
+++ b/watch.css
@@ -19,13 +19,15 @@
   margin: auto;
 }
 
-@media (max-width: 425px) {
+@media (max-width: 528px) {
   .chart {
     width: 300px;
     height: 150px;
   }
 
-  .content { width: 100%;}
+  .content {
+    width: 100%;
+  }
 }
 
 #chartDrop {
