--- a/style.css
+++ b/style.css
@@ -199,9 +199,9 @@ h2{
 }
 
 .about{
-    
-    width: 60%;
-    border: 5px solid #DAAD86;
+    height: 50%;
+    width: 70%;
+    /* border: 5px solid #DAAD86; */
     padding: 10px 30px;
     font-size: larger;
     text-align: justify;
