--- a/style.css
+++ b/style.css
@@ -204,6 +204,11 @@ h2{
 
     .text{
         display: block;
+        /* text-align: justify;
+        width: 80%; */
+    }
+
+    p{
         text-align: justify;
         width: 80%;
     }
