--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    padding: 0;
+    /* padding: 0; */
     margin: 0;
     text-decoration: none;
     list-style: none;
@@ -109,7 +109,6 @@ ul{
     left: -100%;
     text-align: center;
     transition: all .5s;
-    /* margin: 0 0 0 0; */
 }
 
 nav ul li{
@@ -176,14 +175,54 @@ div.example::after {
 }
 
 .footer {
-    position: fixed;
-    padding: 10px 10px 0px 10px;
-    bottom: 0;
+    /* position: fixed; */
+    /* padding: 10px 10px 0px 10px; */
+    /* bottom: 0; */
     width: 100%;
-    height: 40px;
+    height: 60px;
     background: #DAAD86;
-    /* padding: 0;
-    margin: 0; */
+
+
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* flex-direction: column; */
+    max-width: 100vw;
+}
+
+footer .icons{
+    /* position: fixed; */
+    max-width: 90vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 10px;
+    transition: all 0.2s ease-in;
+    padding: 15px;
+}
+
+.icon{
+    background: transparent;
+    /* margin: 5px; */
+    padding: 8px;
+}
+
+.copy{
+    /* position: fixed; */
+    padding: 10px;
+    font-size: 20px;
+    align-self: flex-end;
+    background: #DAAD86;
+    color: white;
+}
+
+h4{
+    color: white;
+    padding-left: 30px;
+
 }
 
 h2{
@@ -194,10 +233,10 @@ h2{
 .text{
     padding: 10px;
 }
+
 .about{
     height: 50%;
     width: 70%;
-    /* border: 5px solid #DAAD86; */
     padding: 10px 30px;
     font-size: larger;
     text-align: justify;
@@ -205,7 +244,6 @@ h2{
     position: absolute;
     top: 50%;
     left: 50%;
-    /* -ms-transform: translate(-50%, -50%); */
     transform: translate(-50%, -50%);
 }
 
@@ -229,33 +267,30 @@ h2{
         margin: auto;
         width: 93%;
     }
-
 }
 
 @media screen and (min-width:426px) and (max-width:952px){
     .example{
         /* display: block; */
-  margin-left: auto;
-  margin-right: auto;
+        margin-left: auto;
+        margin-right: auto;
         /* width: 70%; */
     }
 
-}
-
     .text{
         display: block;
-        /* text-align: justify;
-        width: 80%; */
     }
 
     p{
         text-align: justify;
         width: 100%;
     }
+
     .about{
         margin: auto;
-         padding: 5px ;
+        padding: 5px ;
     }
+
     .about p{
         text-align: center;
     }
